# Net

./: CMakeLists.txt  README.md  build.bat  clean.bat  data.txt  tf_tools.py  totxt.py
model/: cnn_model.conf  nn_model.conf
src/: Function.cpp  Function.h  Image.cpp  Image.h  Mat.cpp  Mat.h  Matrix.cpp  Net.cpp  Net.h  Train.cpp  Train.h  Vriable.h  filetools.cpp  filetools.h  include.h  main.cpp
